--- a/environment.yml
+++ b/environment.yml
@@ -13,9 +13,10 @@ dependencies:
   - bash=4.4.18=h67949de_1000
   - blas=1.0=openblas
   - bzip2=1.0.8=h516909a_3
-  - ca-certificates=2020.10.14=0
+  - ca-certificates=2020.6.20=hecda079_0
   - cairo=1.14.12=h80bd089_1005
-  - certifi=2020.6.20=py37_0
+  - catkin_pkg=0.4.23=pyh9f0ad1d_0
+  - certifi=2020.6.20=py37he5f6b98_2
   - cffi=1.14.1=py37h2b28604_0
   - cloudpickle=1.6.0=py_0
   - colorama=0.4.4=py_0
@@ -26,6 +27,8 @@ dependencies:
   - cytoolz=0.11.0=py37h7b6447c_0
   - dask-core=2.30.0=py_0
   - decorator=4.4.2=py_0
+  - distro=1.5.0=pyh9f0ad1d_0
+  - docutils=0.16=py37he5f6b98_2
   - ffmpeg=4.0.2=ha0c5888_2
   - fontconfig=2.13.1=he4413a7_1000
   - freeglut=3.0.0=hf484d3e_1005
@@ -86,7 +89,7 @@ dependencies:
   - olefile=0.46=py_0
   - opencv=3.4.2=py37h6fd60c2_1
   - openh264=1.8.0=hdbcaa40_1000
-  - openssl=1.0.2u=h7b6447c_0
+  - openssl=1.0.2u=h516909a_0
   - pandas=1.1.1=py37he6710b0_0
   - parso=0.7.0=py_0
   - pcre=8.44=he1b5a44_0
@@ -111,6 +114,7 @@ dependencies:
   - pyyaml=5.3.1=py37h7b6447c_1
   - pyzmq=19.0.2=py37he6710b0_1
   - readline=7.0=hf8c457e_1001
+  - rospkg=1.2.8=pyh9f0ad1d_0
   - scikit-image=0.16.2=py37h0573a6f_0
   - scipy=1.5.2=py37habc2bb6_0
   - setuptools=49.6.0=py37hc8dfbb8_0
